# my-paper

./: RGT_HGIDS_SCI_Methods_with_Figures.docx
final_method_work/: .gitignore  CHANGELOG.md  METHOD_RGT_HGIDS.md  README.md  VERSION  pyproject.toml  requirements.txt
final_method_work/configs/: README.md
final_method_work/docs/: e1_gdtc_mcbg_experiment.md  e1_rgd_bigru_mcbg_experiment.md  e1_rgd_bigru_rigorous_experiment.md  idea_agf_st_hgan_mcbg.md  research_contract_v1.md  rgt_hgids_experiment_protocol.md  rgt_hgids_method_overview.md  rgt_hgids_paper_section_draft.md  rgt_hgids_references.md  tbb_rr_redundancy_protocol.md  theia_wra_rr_protocol.md  wra_rr_redundancy_protocol.md
final_method_work/malsnif/: __init__.py  analyze.py  cli.py  config.py  constants.py  decision_report.py  ea_report.py  evaluate.py  train.py
final_method_work/scripts/: check_cadets_data_layout.sh  check_theia_data_layout.sh  collect_analysis_bundle.sh  collect_tbb_rr_analysis_bundle.sh  collect_theia_tbb_rr_analysis_bundle.sh  collect_theia_wra_rr_analysis_bundle.sh  collect_wra_rr_analysis_bundle.sh  diagnose_processed.sh  lib_gpu_guard.sh  make_toy_cadets.sh  prepare_darpa_dirs.sh  run_cadets_tbb_rr_verdict.sh  run_cadets_v3_ea_verdict.sh  run_cadets_wra_rr_verdict.sh  run_e1_gdtc_tbb_rr_theia_cadets.sh  run_e1_rgd_bigru_tbb_rr_theia_cadets.sh  run_e1_rgd_bigru_tbb_rr_theia_cadets_rigorous.sh  run_rgt_hgids_quick.sh  run_rgt_hgids_rigorous.sh  run_theia_tbb_rr_verdict.sh  run_theia_wra_rr_verdict.sh  verify_mal_cuda.cmd  verify_mal_cuda_bash.cmd  wait_for_gpu_free.sh
(+73 files in other folders)
